@@ -46,6 +46,9 @@ People/companies who were/are contributing code to cocos2d for iPhone (alphabeti
 * Viktor Lidholt (http://www.cocosbuilder.com)
 	LabelTTF loads custom fonts correctly on Mac
 
+* yichao.zhang (https://github.com/zeaster)
+	Fixed possible double 'fire' of instant actions inside a sequence (issue #1398)
+
 
 cocos2d for iPhone 2.0 authors
 ------------------------------
